# multi-task-chemistry-rl

./: README.md  pyproject.toml  requirements.txt
configs/: miq_curriculum.yaml  miq_curriculum_01_counts.yaml  miq_curriculum_04_generation_train.yaml
configs/multitask/: miq_cg_probe.yaml  miq_cg_probe_train.yaml  miq_curriculum.yaml  miq_curriculum_01_counts_qwen3_train.yaml  miq_curriculum_01_counts_train.yaml  miq_curriculum_02_simple_index.yaml  miq_curriculum_02_simple_index_train.yaml  miq_curriculum_03_full_index.yaml  miq_curriculum_03_full_index_train.yaml  miq_curriculum_04_generation.yaml  miq_curriculum_04_generation_train.yaml  miq_curriculum_05_consolidation.yaml  miq_curriculum_05_consolidation_train.yaml  miq_curriculum_1.5b.yaml  miq_curriculum_qwen3.yaml  miq_eval_suite.yaml  miq_experiment_suite.yaml  miq_h2_shaped_train.yaml  miq_h2_sparse_train.yaml  miq_index_eval.yaml  miq_multitask_a100_1.5b_train.yaml  miq_multitask_a100_train.yaml  miq_multitask_a100_vllm_train.yaml  miq_multitask_adaptive.yaml  miq_multitask_adaptive_qwen3_train.yaml  miq_multitask_adaptive_train.yaml  miq_multitask_balanced.yaml  miq_multitask_balanced_qwen3_train.yaml  miq_multitask_balanced_train.yaml  miq_multitask_pooled.yaml  miq_multitask_pooled_qwen3_train.yaml  miq_multitask_pooled_train.yaml  miq_sft_index_warmstart.yaml  miq_transfer.yaml  miq_transfer_format_train.yaml  miq_transfer_probe.yaml  miq_transfer_train.yaml
configs/single_task/: miq_cg_carbon_atom.yaml  miq_cg_ring_count.yaml  miq_mc_composition.yaml  miq_mc_topology.yaml  miq_mi_ring_aromatic.yaml  miq_sc_aromatic_ring.yaml  miq_sc_carbon_atom.yaml  miq_sc_fused_ring.yaml  miq_sc_hba.yaml  miq_sc_hetero_atom.yaml  miq_sc_ring_count.yaml  miq_sc_rotatable_bond.yaml  miq_si_aromatic_ring.yaml  miq_si_carbon_atom.yaml  miq_si_hetero_atom.yaml  miq_si_ring.yaml  moleculariq_qwen05b.yaml  moleculariq_qwen3_08b.yaml
docs/: POSTER_PLAN.md
scripts/: inspect_moleculariq_dataset.py  plot_experiment_report.py  run_curriculum.py  sft.py  train.py
scripts/leonardo/: README.md  train_multitask_grpo.slurm
scripts/multitask/: evaluate_multitask.py  inspect_moleculariq_dataset.py  make_failure_report.py  make_poster_figures.py  plot_experiment_report.py  preprocess_multitask.py  run_curriculum.py
scripts/single_task/: auto_train_compare.py  cross_generalization.py  evaluate.py  plot_training.py  preprocess.py
slurm/: README.md  cache_model_leonardo.sh  constraints-leonardo.txt  curriculum.slurm  curriculum_1.5b.slurm  curriculum_from_sft.slurm  curriculum_qwen3.slurm  curriculum_vllm.slurm  evaluate.slurm  evaluate_1.5b.slurm  h2_eval_report.slurm  h2_reward_ablation.slurm  run_h2.sh  setup_leonardo.sh  setup_qwen3.sh  setup_vllm.sh  sft_index_warmstart.slurm  strategies.slurm  strategies_qwen3.slurm  transfer_eval.slurm  transfer_passk.slurm  transfer_train.slurm
src/grpo_reasoning/: cli.py  curriculum.py  dataset_audit.py  multitask.py  rewards.py
src/grpo_reasoning/common/: __init__.py  cli.py  eval.py  passk.py  prompts.py  rewards.py  sft.py  smiles.py  train.py
src/grpo_reasoning/common/tasks/: base.py  moleculariq.py
src/grpo_reasoning/multitask/: __init__.py  audit.py  cli.py  curriculum.py  dataset.py  gates.py  passk_report.py  reporting.py
src/grpo_reasoning/single_task/: __init__.py  cli.py  data.py
tests/: test_eval.py  test_gates.py  test_multitask.py  test_pass_at_k.py  test_prompts.py  test_rewards.py  test_sft.py
