[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grpo-reasoning"
version = "0.1.0"
description = "Multitask GRPO fine-tuning for MolecularIQ chemistry reasoning with Qwen2.5-0.5B."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "transformers>=4.47,<5.0",
    # Pin to the 0.16.x line the code targets. trl >=0.17 imports FSDPModule
    # (FSDP2) from torch, which breaks on torch builds that predate that API.
    "trl>=0.16,<0.17",
    "datasets>=3.0",
    "accelerate>=1.0",
    "peft>=0.10",
    "numpy>=1.26,<2.0",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
bnb = ["bitsandbytes>=0.43; platform_system != 'Darwin'"]
chem = ["moleculariq-core @ git+https://github.com/ml-jku/moleculariq-core.git"]
dev = ["pytest>=8.0"]

[project.scripts]
# Shared
grpo-train = "grpo_reasoning.common.cli:train_main"
# Single-task pipeline
grpo-preprocess = "grpo_reasoning.single_task.cli:preprocess_main"
grpo-evaluate = "grpo_reasoning.single_task.cli:evaluate_main"
grpo-plot-training = "grpo_reasoning.single_task.cli:plot_training_main"
# Multitask pipeline
grpo-preprocess-multitask = "grpo_reasoning.multitask.cli:preprocess_multitask_main"
grpo-evaluate-multitask = "grpo_reasoning.multitask.cli:evaluate_multitask_main"
grpo-curriculum = "grpo_reasoning.multitask.cli:curriculum_main"
grpo-audit-moleculariq = "grpo_reasoning.multitask.cli:audit_moleculariq_main"
grpo-report = "grpo_reasoning.multitask.cli:report_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
